--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "core-js": "^2.5.4",
     "rxjs": "6.0.0",
     "zone.js": "^0.8.26",
-    "ngx-bootstrap": "3.0.1"
+    "bootstrap": "4.0.0-alpha.6"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
