--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@angular/platform-browser": "6.0.9",
     "@angular/platform-browser-dynamic": "6.0.9",
     "@angular/router": "6.0.9",
+    "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.5.4",
     "rxjs": "6.0.0",
-    "zone.js": "^0.8.26",
-    "bootstrap": "4.0.0-alpha.6"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
