--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "6.0.9",
     "@angular/platform-browser-dynamic": "6.0.9",
     "@angular/router": "6.0.9",
+    "@angular/youtube-player": "^9.2.2",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.5.4",
     "rxjs": "6.0.0",
